fix: window buttons not being aligned

--- a/app/styles/window.module.scss
+++ b/app/styles/window.module.scss
@@ -49,7 +49,9 @@
     }
 
     .buttons {
-      img {
+      display: flex;
+
+      .button {
         width: 1.5rem;
         margin: 0 0.2rem;
 
